Fixing footer items on mobile

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -18,6 +18,10 @@ footer > .container{
     .ftr__group{
         text-transform: uppercase;
     }
+    .ftr__title{
+        padding: 0 1rem 0.5rem 1rem;
+        text-align: center;
+    }
     .ftr__group{
         display: flex;
         justify-content: center;
