--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -851,6 +851,10 @@ footer > .container {
 #ftr .ftr__group {
   text-transform: uppercase;
 }
+#ftr .ftr__title {
+  padding: 0 1rem 0.5rem 1rem;
+  text-align: center;
+}
 #ftr .ftr__group {
   display: flex;
   justify-content: center;
